--- a/src/main/resources/config/online/config.properties
+++ b/src/main/resources/config/online/config.properties
@@ -1,5 +1,5 @@
 #jdbc config
 jdbc.driverclass=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/
+jdbc.url=jdbc:mysql://localhost:3306/blog?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&useSSL=false
 jdbc.username=root
 jdbc.password=open
