--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,17 @@
     <name>blog</name>
 
     <properties>
+        <javax.servlet.version>4.0.0</javax.servlet.version>
         <org.springframework.version>5.0.0.RELEASE</org.springframework.version>
+        <commons.dbcp2.version>2.1.1</commons.dbcp2.version>
+        <org.aspectj.version>1.8.13</org.aspectj.version>
+        <org.mybatis.version>3.4.5</org.mybatis.version>
+        <org.mybatis.spring.version>1.3.0</org.mybatis.spring.version>
         <fasterxml.jackson.version>2.9.3</fasterxml.jackson.version>
+        <mysql.connector.version>5.1.45</mysql.connector.version>
+        <slf4j.version>1.7.25</slf4j.version>
+        <logback.version>1.2.3</logback.version>
+        <junit.version>4.12</junit.version>
         <resources.base>${project.basedir}/src/main/resources</resources.base>
     </properties>
 
@@ -41,7 +50,7 @@
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
-            <version>4.0.0</version>
+            <version>${javax.servlet.version}</version>
             <scope>provided</scope>
         </dependency>
 
@@ -52,7 +61,6 @@
             <version>${org.springframework.version}</version>
             <!--<scope>runtime</scope>-->
         </dependency>
-
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-web</artifactId>
@@ -63,17 +71,15 @@
             <artifactId>spring-webmvc</artifactId>
             <version>${org.springframework.version}</version>
         </dependency>
-
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-jdbc</artifactId>
             <version>${org.springframework.version}</version>
         </dependency>
-
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-dbcp2</artifactId>
-            <version>2.1.1</version>
+            <version>${commons.dbcp2.version}</version>
         </dependency>
 
         <!--todo:spring aop 和 aspectj 的关系是怎么样的，为什么这里注释掉aop也能用aop-->
@@ -82,40 +88,38 @@
             <!--<artifactId>spring-aop</artifactId>-->
             <!--<version>${org.springframework.version}</version>-->
         <!--</dependency>-->
-
         <!--aop-->
         <dependency>
             <groupId>org.aspectj</groupId>
             <artifactId>aspectjrt</artifactId>
-            <version>1.8.13</version>
+            <version>${org.aspectj.version}</version>
         </dependency>
         <dependency>
             <groupId>org.aspectj</groupId>
             <artifactId>aspectjweaver</artifactId>
-            <version>1.8.13</version>
+            <version>${org.aspectj.version}</version>
         </dependency>
 
         <!--mybatis-->
         <dependency>
             <groupId>org.mybatis</groupId>
             <artifactId>mybatis</artifactId>
-            <version>3.4.5</version>
+            <version>${org.mybatis.version}</version>
         </dependency>
-
         <dependency>
             <groupId>org.mybatis</groupId>
             <artifactId>mybatis-spring</artifactId>
-            <version>1.3.0</version>
+            <version>${org.mybatis.spring.version}</version>
         </dependency>
 
         <!--mysql driver-->
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>5.1.45</version>
+            <version>${mysql.connector.version}</version>
         </dependency>
 
-        <!--json convert-->
+        <!--json convert for the result to return-->
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-core</artifactId>
@@ -132,20 +136,35 @@
             <version>${fasterxml.jackson.version}</version>
         </dependency>
 
-
+        <!--log-->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>jcl-over-slf4j</artifactId>
+            <version>${slf4j.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>${slf4j.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>${logback.version}</version>
+        </dependency>
 
         <!--test-->
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.12</version>
-            <scope>test</scope>
-        </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-test</artifactId>
             <version>${org.springframework.version}</version>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>${junit.version}</version>
+            <scope>test</scope>
         </dependency>
 
         <!--tool-->
