--- a/src/main/resources/config/local/config.properties
+++ b/src/main/resources/config/local/config.properties
@@ -3,3 +3,6 @@ jdbc.driverclass=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://localhost:3306/blog?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&useSSL=false
 jdbc.username=root
 jdbc.password=open
+
+log.path=D://log
+log.name=blog.log
